add key for Mailbox folder and search query in config
previous Version: only UNSEEN mails from INBOX are parsed.

--- a/Parser/MailConfig.ini
+++ b/Parser/MailConfig.ini
@@ -37,12 +37,15 @@
 # cachePath   is the Path on HDD where incomplete mails are saved, 
 #             this directory is also used if processingPath is not given or empty
 #
+# imapquery see https://tools.ietf.org/html/rfc3501#page-49 Search Command
 [General]
 protocol = file
 imapserver = 
 smtpserver = 
 username = 
 password = 
+mailboxfolder = INBOX
+imapquery = (UNSEEN FROM \"john@example.com linda@example.com mike@example.com\")
 datatypes = Photo, Document
 logfile = ./OutputData/E-MailParser.log
 exiftoolpath = 
