FIX: Case-insensitive check of keywords in email; fix minor bugs in config file

--- a/Parser/MailConfig.ini
+++ b/Parser/MailConfig.ini
@@ -37,12 +37,15 @@
 # cachePath   is the Path on HDD where incomplete mails are saved, 
 #             this directory is also used if processingPath is not given or empty
 #
+# imapquery see https://tools.ietf.org/html/rfc3501#page-49 Search Command
 [General]
 protocol = file
 imapserver = 
 smtpserver = 
 username = 
 password = 
+mailboxfolder = INBOX
+imapquery = (UNSEEN FROM \"john@example.com linda@example.com mike@example.com\")
 datatypes = Photo, Document
 logfile = ./OutputData/E-MailParser.log
 exiftoolpath = 
@@ -57,14 +60,14 @@ fileformats = jpg, jpeg, png, bmp
 keys = Tags,Event, Author, ImageRights, Create_Year, Create_Month, Create_Day
 category = Photo_Category
 directory = ./OutputData/$(Photo_Category)/$(Mail_Year)
-filename = $(File_Name)_$(Create_Year)-$(Create_Month)-$(Create_Day)_($(**))
+filename = $(Event)_$(Create_Year)-$(Create_Month)-$(Create_Day)_($(**))
 
 [Document]
-fileformats = pdf
+fileformats = pdf, txt
 keys = Event
 category = Doc_Category
 directory = ./OutputData/$(Doc_Category)/$(Mail_Year)
-filename = $(Event)_$(Mail_Year)-$(Mail_Month)-$(Mail_Day)_$(**)
+filename = $(Event)_$(Mail_Year)-$(Mail_Month)-$(Mail_Day)_$(File_Name)_$(**)
 
 [Photo_Category]
 name = Category
@@ -86,13 +89,13 @@ appendmetadata = XPComment
 name = Event
 
 [Author]
-name = Autor
+name = Author
 writemetadata = Artist, Creator
 
 [ImageRights]
 name = Copyright
 writemetadata = Rights
-default = Dieses Picture is mine $(Mail_Year)
+default = This Picture is mine $(Mail_Year)
 
 [Create_Year]
 name = Create_Year
